Bug 94910 - Calc: Basic drawing tools don't work
Summary: Calc: Basic drawing tools don't work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0
Keywords: regression
: 95000 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-09 13:35 UTC by Maxim Monastirsky
Modified: 2016-10-25 19:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2015-10-09 13:35:15 UTC
Steps to reproduce:

1) Open Calc
2) Insert->Text Box

Expected results: Should be able to draw a text box.
Actual results: Nothing changes.

Regression of:

commit 89d39bc100aabf5dccbe77c0b5c0c85736e85b39
Author: Oliver Specht <oliver.specht@cib.de>
Date:   Wed Sep 30 16:10:07 2015 +0200

        tdf#94559: 4th step to remove rtti.hxx
Comment 1 Maxim Monastirsky 2015-10-09 13:48:03 UTC
Patch is here:

https://gerrit.libreoffice.org/19276/
Comment 2 Commit Notification 2015-10-09 14:24:00 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e23ee076ae6b46af617c0692998b22459a43dde

tdf#94910 sc: Fix drawing tools

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Maxim Monastirsky 2015-10-13 06:50:47 UTC
*** Bug 95000 has been marked as a duplicate of this bug. ***
Comment 4 V Stuart Foote 2015-10-13 15:28:18 UTC
Yup, thanks Maxim!

Verified fixed on Windows with today's TB build
Version: 5.1.0.0.alpha1+
Build ID: ec66ad595393312525937b628297cb3494776e1f
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-10-13_13:10:33
Locale: en-US (en_US)