tdf#94910 sc: Fix drawing tools

Regression of:

commit 89d39bc100aabf5dccbe77c0b5c0c85736e85b39
Author: Oliver Specht <oliver.specht@cib.de>
Date:   Wed Sep 30 16:10:07 2015 +0200

        tdf#94559: 4th step to remove rtti.hxx

Change-Id: I94408dafde0f2dbea6c3a112963468c593adfc2d